--- a/Dockerfile-pi
+++ b/Dockerfile-pi
@@ -5,9 +5,9 @@
 
 #arm
 #FROM arm64v8/python
-FROM armhf/python
+#FROM armhf/python
 #FROM resin/rpi-raspbian:stretch
-#FROM hypriot/rpi-python
+FROM hypriot/rpi-python
 
 #docker build -t f80hub/material_matrix_arm . & docker push f80hub/material_matrix_arm:latest
 #docker rm -f material_matrix && docker pull f80hub/material_matrix_arm:latest && docker run --restart=always -p 5000:5010 --name material_matrix -d f80hub/material_matrix_arm:latest
@@ -17,10 +17,8 @@ FROM armhf/python
 RUN apt-get update -y
 RUN apt-get upgrade -y
 RUN apt-get dist-upgrade -y
+RUN sudo apt-get install -y python3 python3-dev python3-pip python3-virtualenv --no-install-recommends && ln -s /usr/bin/python3 /usr/bin/python && rm -rf /var/lib/apt/lists/*
 
-RUN apt-get remove python2.7 --purge -y
-
-RUN apt-get install -y python3 python3-dev python3-pip
 
 EXPOSE 5000
 
@@ -32,8 +30,10 @@ WORKDIR /app
 COPY requirements.txt /app/requirements.txt
 COPY assets /app/assets
 
-RUN pip install --upgrade pip
-RUN pip install -r requirements.txt
+RUN pip3 install --upgrade pip
+RUN pip3 install setuptools
+
+RUN pip3 install -r requirements.txt
 
 COPY . /app
 
