--- a/Dockerfile-pi
+++ b/Dockerfile-pi
@@ -5,19 +5,30 @@
 
 #arm
 #FROM arm64v8/python
-#FROM armhf/python
+FROM armhf/python
 #FROM resin/rpi-raspbian:stretch
-FROM hypriot/rpi-python
+#FROM hypriot/rpi-python
 
 #docker build -t f80hub/material_matrix_arm . & docker push f80hub/material_matrix_arm:latest
 #docker rm -f material_matrix && docker pull f80hub/material_matrix_arm:latest && docker run --restart=always -p 5000:5010 --name material_matrix -d f80hub/material_matrix_arm:latest
 
 
-
 RUN apt-get update -y
 RUN apt-get upgrade -y
 RUN apt-get dist-upgrade -y
-RUN sudo apt-get install -y python3 python3-dev python3-pip python3-virtualenv --no-install-recommends && ln -s /usr/bin/python3 /usr/bin/python && rm -rf /var/lib/apt/lists/*
+
+RUN apt-get remove python2.7 --purge -y
+
+
+RUN apt-get install -y build-essential tk-dev libncurses5-dev libncursesw5-dev libreadline6-dev libdb5.3-dev libgdbm-dev libsqlite3-dev libssl-dev libbz2-dev libexpat1-dev liblzma-dev zlib1g-dev
+RUN apt-get install -y libssl-dev openssl libffi-dev
+
+RUN wget https://www.python.org/ftp/python/3.6.5/Python-3.6.5.tar.xz
+RUN tar xf Python-3.6.5.tar.xz
+WORKDIR Python-3.6.5
+RUN ./configure
+RUN make
+RUN make altinstall
 
 
 EXPOSE 5000
@@ -30,10 +41,8 @@ WORKDIR /app
 COPY requirements.txt /app/requirements.txt
 COPY assets /app/assets
 
-RUN pip3 install --upgrade pip
-RUN pip3 install setuptools
-
-RUN pip3 install -r requirements.txt
+RUN pip install --upgrade pip
+RUN pip install -r requirements.txt
 
 COPY . /app
 
