--- a/Dockerfile-x86
+++ b/Dockerfile-x86
@@ -1,24 +1,28 @@
 #install docker
 #sudo curl -sSL get.docker.com | sh
 
-#x86
-FROM python:3
-#docker build -t f80hub/material_matrix_x86 . & docker push f80hub/material_matrix_x86:latest
+#Construction et installation de l'image
+#docker build -t f80hub/materiality_matrix_x86 . & docker push f80hub/materiality_matrix_x86:latest
 #pour les problemes de droit sur les répertoires : su -c "setenforce 0"
-#docker rm -f material_matrix && docker pull f80hub/material_matrix_x86:latest && docker run --restart=always -p 5010:5000 --name material_matrix -d f80hub/material_matrix_x86:latest
+#docker rm -f materiality_matrix_x86 && docker pull f80hub/materiality_matrix_x86:latest && docker run --restart=always -v /root/certs:/app/certs -p 6080:6080 --name materiality_matrix_x86 -d f80hub/materiality_matrix_x86:latest 6080 ssl
 
-#lancement en non sécurisé
-#su -c "setenforce 0" && docker rm -f clusterbench && docker pull f80hub/cluster_bench_x86:latest && docker run --restart=always -v /datas:/app/datas -v /clustering:/app/clustering -p 5000:5000 --name clusterbench -d f80hub/cluster_bench_x86:latest
+
+#x86
+FROM python:3.7.4-alpine
+
 
 #arm
 #FROM arm64v8/python
 #FROM armhf/python
+#docker build -t f80hub/materiality_matrix_arm . & docker push f80hub/materiality_matrix_arm:latest
+
 #FROM resin/rpi-raspbian:stretch
 
 # Install dependencies
 #RUN sudo apt-get update -y
 #RUN sudo apt-get dist-upgrade
 #RUN sudo apt-get install -y python3 python3-dev python3-pip python3-virtualenv --no-install-recommends && ln -s /usr/bin/python3 /usr/bin/python && rm -rf /var/lib/apt/lists/*
+
 
 #FROM hypriot/rpi-python
 #RUN apt-get update -y
@@ -40,9 +44,7 @@ FROM python:3
 #docker rm -f clusterbench && docker pull f80hub/cluster_bench_arm:latest
 #docker run --restart=always -p 5000:5000 --name clusterbench -d f80hub/cluster_bench_arm:latest
 
-
 #test:docker run -p 5000:5000 -t f80hub/cluster_bench_x86:latest
-
 
 
 #test SocketServer : http://45.77.160.220:5000
@@ -51,21 +53,45 @@ FROM python:3
 #docker build -t hhoareau/cluster_bench_arm .
 #docker push hhoareau/cluster_bench_arm:latest
 
-EXPOSE 5000
-
-RUN mkdir /app
-RUN mkdir /app/assets
-
-WORKDIR /app
-
-COPY requirements.txt /app/requirements.txt
-COPY assets /app/assets
+RUN apk update
+RUN apk --update add python
 
 RUN pip3 install --upgrade pip
-RUN pip3 install setuptools
 
-RUN pip3 install -r requirements.txt
+#Installation des librairies complémentaires
+RUN pip3 -v install Flask
+RUN apk add py3-numpy
+RUN apk add py3-scipy
 
+RUN apk --no-cache --update-cache add gcc g++ gfortran python python3-dev py-pip build-base wget freetype-dev libpng-dev openblas-dev
+RUN pip3 install cython
+RUN pip3 -v install pandas
+
+RUN pip3 install document
+
+RUN pip3 install idna
+RUN pip3 install PyPDF2
+RUN pip3 install xlrd
+RUN pip3 install xlsxwriter
+RUN pip3 install beautifulsoup4
+RUN pip3 install pdfminer.six
+RUN pip3 -v install flask-cors
+
+RUN apk add py-setuptools
+RUN apk add  --no-cache --update-cache libxml2-dev libxslt-dev
+RUN easy_install -v google-search
+
+RUN pip3 install textblob
+RUN python3 -m textblob.download_corpora
+
+RUN apk add py3-openssl
+RUN pip3 install nltk
+
+EXPOSE 6000
+VOLUME /certs
+
+RUN mkdir /app
+WORKDIR /app
 COPY . /app
 
 ENTRYPOINT ["python", "app.py"]
